--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
+    "react-router-dom": "^6.15.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
