--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.15.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
