--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "expo": "^49.0.8",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
+    "expo-notifications": "~0.20.1",
     "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -29,8 +31,8 @@
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.15.0",
-    "typescript": "^5.1.3",
-    "expo-notifications": "~0.20.1"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
