--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
+    "react-navigation": "^4.4.4",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
