--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "expo-notifications": "~0.20.1",
     "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
+    "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.72.4",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.12.0",
