--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react": "~18.2.14",
+    "@types/typescript": "^2.0.0",
     "axios": "^1.5.0",
     "expo": "^49.0.8",
     "expo-constants": "~14.4.2",
