--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "'": "expo/vector-icons/FontAwesome'",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.7",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react": "~18.2.14",
@@ -35,11 +36,14 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-simple-storage": "^0.0.3",
     "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
