--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "'": "expo/vector-icons/FontAwesome'",
+    "@clerk/clerk-expo": "^0.19.10",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^6.1.7",
@@ -45,7 +46,8 @@
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
