--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "expo-linking": "~5.0.2",
     "expo-notifications": "~0.20.1",
     "expo-router": "2.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -47,7 +49,7 @@
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "expo-secure-store": "~12.3.1"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
