--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
@@ -49,7 +49,8 @@
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "expo-updates": "~0.18.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
