--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-router": "2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
@@ -37,10 +38,12 @@
     "react-native": "0.72.6",
     "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-simple-storage": "^0.0.3",
     "react-native-storage": "^1.0.1",
+    "react-native-touchable-scale": "^2.2.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
@@ -49,8 +52,7 @@
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "yup": "^1.3.2",
-    "expo-updates": "~0.18.17"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
