--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -32,6 +33,7 @@
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "nativewind": "^2.0.11",
+    "navigationbar-react-native": "^0.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
